--- a/index.html
+++ b/index.html
@@ -1,43 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-  <body>
-    <div>
-      Register Form
-      <form action="">
-        <label for="firstName">First Name</label>
-        <input type="text" id="firstName" />
+    <link href="
+https://cdn.jsdelivr.net/npm/reset-css@5.0.2/reset.min.css
+" rel="stylesheet" />
+    <link rel="stylesheet" href="style.css" />
+    <title>Register Form</title>
+</head>
 
-        <label for="lastName">Last Name</label>
-        <input type="text" id="lastName" />
+<body>
+    <div class="form-container">
+        <h1>Register Form</h1>
+        <form action="">
+            <div class="form-row">
+                <div class="form-group">
+                    <label for="firstName">First Name</label>
+                    <input type="text" id="firstName" />
+                </div>
+                <div class="form-group">
+                    <label for="lastName">Last Name</label>
+                    <input type="text" id="lastName" />
+                </div>
+            </div>
 
-        <label for="birthday">Birthday</label>
-        <input type="date" id="birthday" />
+            <div class="form-row">
+                    <div class="form-group">
+                        <label for="birthday">Birthday</label>
+                        <input type="date" id="birthday" />
+                    </div>
 
-        <label>Gender</label>
-        <input type="radio" name="" id="" />
-        <label for="">Male</label>
-        <input type="radio" name="" id="" />
-        <label for="">Female</label>
+                    <div class="form-group">
+                        <label>Gender</label>
+                        <div class="radio-group">
+                            <div class="radio-item">
+                                <input type="radio" name="gender" id="male"/>
+                                <label for="male">Male</label>
 
-        <label for="">Email</label>
-        <input type="email" id="email" />
+                            </div>
 
-        <label for="">Phone Number</label>
-        <input type="tel" />
-        <label for="">Subject</label>
-        <select name="" id="">
-          <option value="">Choose option</option>
-          <option value="">Mr.</option>
-          <option value="">Mrs.</option>
-          <option value="">Ms.</option>
-        </select>
-        <input type="button" value="Submit" />
-      </form>
+                                <input type="radio" name="gender" id="female" />
+                                <label for="female">Female</label>
+
+                        </div>
+
+                    </div>
+                
+            </div>
+            <div class="form-row">
+                <div class="form-group">
+                    <label for="">Email</label>
+                    <input type="email" id="email" />
+                </div>
+                <div class="form-group">
+                    <label for="">Phone Number</label>
+                    <input type="tel" />
+                </div>
+            </div>
+
+
+            <div class="form-group">
+                <label for="">Subject</label>
+                <select name="" id="">
+                    <option value="">Choose option</option>
+                    <option value="">Mr.</option>
+                    <option value="">Mrs.</option>
+                    <option value="">Ms.</option>
+                </select>
+            </div>
+
+            <input type="button" value="Submit" class="submit" />
+        </form>
     </div>
-  </body>
+</body>
+
 </html>
