--- a/index.html
+++ b/index.html
@@ -38,12 +38,11 @@ https://cdn.jsdelivr.net/npm/reset-css@5.0.2/reset.min.css
                             <div class="radio-item">
                                 <input type="radio" name="gender" id="male"/>
                                 <label for="male">Male</label>
-
                             </div>
-
+                            <div class="radio-item">
                                 <input type="radio" name="gender" id="female" />
                                 <label for="female">Female</label>
-
+                            </div>
                         </div>
 
                     </div>
@@ -61,13 +60,13 @@ https://cdn.jsdelivr.net/npm/reset-css@5.0.2/reset.min.css
             </div>
 
 
-            <div class="form-group">
+            <div>
                 <label for="">Subject</label>
                 <select name="" id="">
                     <option value="">Choose option</option>
-                    <option value="">Mr.</option>
-                    <option value="">Mrs.</option>
-                    <option value="">Ms.</option>
+                    <option value="">Math</option>
+                    <option value="">English</option>
+                    <option value="">Science</option>
                 </select>
             </div>
 
